<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="100dp"
            android:paddingVertical="5dp"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="20dp"
            android:ems="3"
            android:hint="@string/username_field"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="20dp"
            android:ems="3"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:baselineAligned="false"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/or_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/or_sign_in"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="170dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/login_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:src="@drawable/google"
                android:scaleType="fitCenter"
                android:layout_margin="15dp"/>
            <ImageButton
                android:id="@+id/login_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:src="@drawable/fb"
                android:scaleType="fitCenter"
                android:layout_margin="15dp"/>
            <ImageButton
                android:id="@+id/login_twitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:src="@drawable/twitter"
                android:scaleType="fitCenter"
                android:layout_margin="15dp"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>